--- a/src/assets/sections/Header/Header.css
+++ b/src/assets/sections/Header/Header.css
@@ -1,23 +1,31 @@
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px ;
-    text-align: left;
+    
+    height:80px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    z-index: 99;
+
+      
+}
+.scrolled{
+    background-color: var(--color-dark);
+    box-shadow: 3px 6px 26px;
 }
 
 header h1 {
-
+    background-color: #fff;
     margin:0 ;
-    font-size: 44px;
+    font-size: 24px;
 }
 
 nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    font-size: 28px;
 }
 
 nav ul li {
@@ -27,7 +35,7 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 0 10px;
+    padding: 0 30px;
 }
 
 nav ul li a:hover {
