--- a/src/assets/sections/Header/Header.css
+++ b/src/assets/sections/Header/Header.css
@@ -1,17 +1,34 @@
-header {
+nav {
     
-    height:80px;
+    height:90px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     z-index: 99;
-
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(2px);
       
 }
+#logo{
+display: flex;
+}
+
+#logo p{
+color: var(--color-gold);
+margin-top: 40px;
+font-size: 24px;
+}
+
+#logo img {
+width: 100px;
+height: 100px;
+}
+
 .scrolled{
-    background-color: var(--color-dark);
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(20px);
     box-shadow: 3px 6px 26px;
 }
 
@@ -25,19 +42,35 @@ nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 nav ul li {
     display: inline;
+    padding: 0 40px;
 }
 
 nav ul li a {
+    position: relative;
     color: #fff;
-    text-decoration: none;
-    padding: 0 30px;
+    text-decoration: none;    
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
+nav ul li a::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-gold);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease;
+
 }
+
+nav ul li a:hover::before {
+    transform: scaleX(1);
+}
+
