--- a/src/assets/components/Card/Card.css
+++ b/src/assets/components/Card/Card.css
@@ -10,7 +10,7 @@
     height: 80vh;
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: 10px 7px 10px;
+    box-shadow: 10px 7px 10px ;
 }
 .c{
   width: 100%;
@@ -59,7 +59,7 @@
     font-size:25px;
     height: max-content;
 }
-.umrah-programs-content a{
+.details{
         position: absolute;
         background: linear-gradient(to right, #e09814 , var(--color-gold), #e09814);
         color: black;
@@ -71,7 +71,7 @@
         bottom: 0;
         margin-bottom: 10px;
 }
-.umrah-programs-content a:hover{
+.details:hover{
     background: linear-gradient(to right,var(--color-gold), #e09814 , var(--color-gold));
     box-shadow: 10px 7px 10px;
 }
