--- a/src/assets/sections/Footer/Footer.css
+++ b/src/assets/sections/Footer/Footer.css
@@ -48,14 +48,14 @@ footer .info p {
 
 }
 
-footer .address ul,
+footer .addres ul,
 .links ul {
     list-style: none;
 
 
 }
 
-footer .address ul li,
+footer .addres ul li,
 .ul-two li {
     padding: 7px;
     font-size: 20px;
