--- a/src/assets/pages/UmrahPrograms/UmrahPrograms.css
+++ b/src/assets/pages/UmrahPrograms/UmrahPrograms.css
@@ -1,5 +1,143 @@
-.umrah-programs{
-    width: 100%;
-    height: 100vh;
-    background-color: aliceblue;
+.umrah-programs {
+    background-color: #2a2b29;
+    border-radius: 10px;
+    box-shadow: 0px 0px 16px rgb(255, 247, 247);
+    padding: 90px 30px;
+    margin-left: 60px;
+    width: 90%;
+    margin: auto;
+    color: white;
 }
+
+.titel-program {
+    text-align: center;
+    color: #E09814;
+    text-transform: capitalize;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.details-trip2 h3 {
+    border-radius: 10px;
+    background-color: #EBCD94;
+    text-align: center;
+    margin: 5px;
+    color: rgb(8, 8, 8);
+    text-transform: capitalize;
+    font-size: 25px;
+}
+b {
+    color: #dbac13;
+}
+.parent{
+    display: flex;
+    flex-direction: row;
+    margin: 70px;
+}
+
+.parent img {
+    width: 600px;
+    height: 550px;
+    box-shadow: 0px 0px 16px rgb(255, 247, 247);
+    margin-left: 75px;
+    margin-top: 100px;
+}
+
+.trip-details {
+    background-color: #2a2b29;
+    width: 800px;
+    height: 400px;
+    font-size: 20px;
+    margin-top: 175px;
+    margin-left: -100px;
+    color: rgb(255, 255, 252);
+}
+
+.trip-details p{
+    margin-bottom: 10px;
+    font-size: 24px;
+    padding: 10px;
+    margin-left: 45px;
+}
+
+.circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #856b17;
+    padding: 2px;
+    margin:6px 20px 20px 20px;
+}
+
+.circle-trip{
+    display: flex;
+    margin-left: 15px;
+}
+
+.butt-bus button:hover {
+    border: none;
+    padding: 8px;
+    margin: 15px;
+    border-radius: 10px;
+    width: 290px;
+    height: 50px;
+    background-color: #E09814;
+    font-size: 18px;
+    margin-left: 390px;
+    font-weight: 800;
+
+}
+
+.book-trip {
+    height: 90px;
+}
+
+.book-trip button {
+    width: 100%;
+    border: none;
+    margin-top: 20px;
+    height: 45px;
+    border-radius: 25%;
+    font-size: 20px;
+    text-align: center;
+    background-color: rgb(80, 79, 79);
+    color: azure;
+}
+
+.book-trip button:hover {
+
+    background-color: #ad7f28;
+    color: #000000;
+
+}
+
+
+.buttons ul{
+    font-size: 28px;
+}
+.buttons ul li {
+    display: inline;
+}
+
+.Hotels,.Buses {
+    text-decoration: none;
+    padding: 15px 40px;
+    color: var(--color-light);
+    transition: 0.2s ease-in-out;
+    -webkit-transition: 0.2s ease-in;
+}
+.Hotels.active {
+    background-color: var(--color-gold);
+    color: var(--color-dark); 
+  }
+  
+  .Buses.active {
+    background-color: var(--color-gold);
+    color: var(--color-dark);
+  }
+  
+
+
+
