--- a/src/assets/components/HotelBusInUmrahProgram/HotelBusInUmrahProgram.css
+++ b/src/assets/components/HotelBusInUmrahProgram/HotelBusInUmrahProgram.css
@@ -1,7 +1,10 @@
 .HotelBusInUmrahProgram{
+    width: 100%;
+    margin: 100px 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    margin-left: 14%;
 }
 
 .HotelBusInUmrahProgram p,h1{
@@ -13,7 +16,7 @@
     width: 450px;
     height: 450px;
     border-radius:50% ;
-    margin: 0 -26px;
+    margin: 0 -27px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,8 +27,8 @@
 
 }
 
-#col2{
-    margin-top: 17%;
+#col1{
+   margin-bottom: 60vh;
 }
 
 .col:hover h1{
@@ -53,3 +56,53 @@
     backdrop-filter: blur(3px);
 
 }
+.colum1{
+    display: contents;
+}
+
+
+ @media (max-width: 767px) {
+    #col1{
+        margin-bottom: 0;
+     }
+   }
+
+   @media (min-width: 768px) and (max-width: 1100px) {
+    .col{
+        width: 400px;
+        height: 400px;
+        margin: 10px;
+       }
+    .colum1{
+        display: flex;
+        flex-direction: column;
+    }
+    #col1{
+        margin-bottom: 0;
+     }
+  }
+
+  @media (min-width: 1101px) and (max-width: 1300px) {
+    .col{
+     width: 350px;
+     height: 350px;
+     margin: 0 -22px;
+    }
+    #col1{
+     margin-bottom: 48vh;
+    }
+  }
+  
+  @media (min-width: 1301px) and (max-width: 1450px) {
+       .col{
+        width: 400px;
+        height: 400px;
+        margin: 0 -25px;
+       }
+       #col1{
+        margin-bottom: 54vh;
+       }
+  }
+  
+  
+  
