--- a/src/assets/components/HotelBusInUmrahProgram/HotelBusInUmrahProgram.css
+++ b/src/assets/components/HotelBusInUmrahProgram/HotelBusInUmrahProgram.css
@@ -1,6 +1,6 @@
 .HotelBusInUmrahProgram{
     width: 100%;
-    margin: 100px 0;
+    margin: 70px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,10 +38,12 @@
     color:var(--color-gold);
     font-size: 24px;
     font-weight: 600;
+    margin: 20px;
  }
 
  .content{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     flex-direction: column;
     justify-content: center;
