--- a/src/assets/sections/Header/Header.css
+++ b/src/assets/sections/Header/Header.css
@@ -15,15 +15,29 @@ nav {
 display: flex;
 }
 
-#logo p{
-color: var(--color-gold);
-margin-top: 40px;
-font-size: 24px;
+#arb{
+  color: var(--color-gold);
+  font-size: 32px;
+  margin: 2px;
+}
+#eng{
+  color: var(--color-gold);
+  font-size: 16px;
+  margin: 0;
+}
+
+.logo-name{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 40px;
+    margin-top: 25px;
+    margin-left: 10px;
 }
 
 #logo img {
-width: 100px;
-height: 100px;
+    width: 100px;
+    height: 100px;
 }
 
 .scrolled{
@@ -74,3 +88,37 @@ nav ul li a:hover::before {
     transform: scaleX(1);
 }
 
+
+#menu{
+    color: white;
+    cursor: pointer;
+    padding-right: 20px;
+    display: none;
+}
+#bars{
+    font-size: 50px;
+}
+
+
+@media  (max-width: 1300px) {
+  
+    #menu {
+        display: block;
+    }
+    nav ul{
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(20px);
+        box-shadow: 20px 10px 46px;
+        width: 100%;
+        top: -350px;
+        height: 350px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        transition: 0.5s ease-in;
+        gap: 25px;
+        direction: rtl;
+         }
+         
+  }
