--- a/src/assets/sections/SectionMain/SectionMain.css
+++ b/src/assets/sections/SectionMain/SectionMain.css
@@ -5,6 +5,7 @@
     background-image: url("../../images/Kaaba.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     transition:2s;
     transform: scale(1.5);
     
@@ -16,7 +17,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 38%;
+    width: 36%;
     height: 100%;
     background-color:rgba(0, 0, 0, 0.7);
     border-top-right-radius: 50%;
@@ -43,7 +44,7 @@
     font-size: 46px;
     color: #e09814;
    text-align: center;
-   margin-bottom: 15%;
+   margin-bottom: 25%;
    
 }
 
@@ -59,4 +60,10 @@
     display: inline-block;
     font-size: 26px;
     margin-top: 15%;
+  }
+
+  @media  (max-width: 1300px) {
+    .overlay {
+      width: 60vh;
+  } 
   }
