update to hotel page

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     --color-darkest:#1f2122;
     --color-silver:#6f6a60;
     --color-dark-gold:#e09814;
+    --color-text: rgb(248, 224, 197);
     --color-light:white;
     --color-gold: #EBCD94;
     --color-bg-body:var(--color-darkest);
