--- a/src/assets/sections/UmrahPrograms/UmrahPrograms.css
+++ b/src/assets/sections/UmrahPrograms/UmrahPrograms.css
@@ -7,7 +7,7 @@
 
 .Umrah-programs-paragraph{
     width: 85%;
-    color:var(--color-dark-gold);
+    color:var(--color-gold);
     direction: rtl;
     font-size: 28px;
     margin: 40px;
