--- a/src/assets/pages/Hotel/Hotel.css
+++ b/src/assets/pages/Hotel/Hotel.css
@@ -3,7 +3,7 @@
 }
 
 .frame-hotel{
-    background-color: #2a2b29;
+    background-image: linear-gradient(346deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 22%,rgba(140, 140, 140,0.04) 22%, rgba(140, 140, 140,0.04) 69%,rgba(225, 225, 225,0.04) 69%, rgba(225, 225, 225,0.04) 100%),linear-gradient(31deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 42%,rgba(140, 140, 140,0.04) 42%, rgba(140, 140, 140,0.04) 85%,rgba(225, 225, 225,0.04) 85%, rgba(225, 225, 225,0.04) 100%),linear-gradient(55deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 13%,rgba(140, 140, 140,0.04) 13%, rgba(140, 140, 140,0.04) 72%,rgba(225, 225, 225,0.04) 72%, rgba(225, 225, 225,0.04) 100%),linear-gradient(90deg, rgb(22,18,14),rgb(22,18,14));
     border-radius: 10px;
     box-shadow: 0px 0px 16px var(--color-dark-gold);
     padding: 10px;
@@ -11,7 +11,7 @@
 }
 .image-hotel img{
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-bottom: 20px;
@@ -21,6 +21,89 @@
    direction: rtl;
    font-size: 30px;
 }
+
+
+.servise h1{
+    text-align: center;
+    padding-top: 20px;
+    color: white;
+    font-size: 35px;
+}
+.servise .lines {
+    display: flex;
+    justify-content: center;
+    margin-top: -8px;
+}
+.servise .lines .line{
+    width: 100px;
+    height: 3px;
+    background-color:antiquewhite;
+} 
+.servise .lines .circle{
+    margin: 0;
+    margin-top: -6px;
+    width: 8px;
+    height: 8px;
+    border: 3px solid rgb(238, 234, 234);
+    border-radius: 50%;
+    background-color: var(--color-dark-gold);
+}
+.servise .servises{
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    text-align: right;
+    font-size: 20px;
+    margin-top: 30px;
+    color: aliceblue;
+}
+.servises ul li{
+  list-style: none;
+  margin-right: 30px;
+}
+.servises p{
+    margin-right: 50px;
+    margin-bottom: 30px;
+    font-size: 28px;
+}
+.around{
+    direction: rtl;
+    margin-right: 50px;
+    font-size: 26px;
+}
+.around ul{
+   list-style: none;
+   display: inline;
+}
+.around .ul li {
+    display: inline;
+    color: rgb(255, 255, 255);
+    font-weight: 800;
+    font-size: 18px;
+    margin-left: 35px;
+    text-transform: capitalize;
+}
+
+.butt ul{
+    font-size: 30px;
+    direction: rtl;
+}
+.butt ul li{
+    display: inline;
+}
+.butt ul li a{
+   text-decoration: none;
+   color: var(--color-text);
+   padding: 10px;
+}
+.butt ul li a:hover {
+    background-color: var(--color-gold);
+    color: black;
+}
+.butt ul li a.active {
+    background-color: var(--color-gold);
+    color: var(--color-dark); 
+  }
+
 
 
 
