--- a/src/assets/sections/Hotel/Hotel.css
+++ b/src/assets/sections/Hotel/Hotel.css
@@ -6,8 +6,8 @@
     width: 100%;
     height:max-content;
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding-top: 100px;
 }
 .Hotel::before {
     content: '';
