--- a/src/assets/pages/Hotel/Hotel.css
+++ b/src/assets/pages/Hotel/Hotel.css
@@ -1,7 +1,10 @@
 .hotel{
     padding: 100px 30px;
 }
-
+.hotel svg{
+color: var(--color-gold);
+margin-left: 10px;
+}
 .frame-hotel{
     background-image: linear-gradient(346deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 22%,rgba(140, 140, 140,0.04) 22%, rgba(140, 140, 140,0.04) 69%,rgba(225, 225, 225,0.04) 69%, rgba(225, 225, 225,0.04) 100%),linear-gradient(31deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 42%,rgba(140, 140, 140,0.04) 42%, rgba(140, 140, 140,0.04) 85%,rgba(225, 225, 225,0.04) 85%, rgba(225, 225, 225,0.04) 100%),linear-gradient(55deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 13%,rgba(140, 140, 140,0.04) 13%, rgba(140, 140, 140,0.04) 72%,rgba(225, 225, 225,0.04) 72%, rgba(225, 225, 225,0.04) 100%),linear-gradient(90deg, rgb(22,18,14),rgb(22,18,14));
     border-radius: 10px;
@@ -17,6 +20,7 @@
     border-top-right-radius: 10px;
     margin-bottom: 20px;
     filter: contrast(0.7);
+    -webkit-filter: contrast(0.7);
 }
 .img-filter{
     display: flex;
@@ -96,6 +100,7 @@
     align-items: center;
     direction: rtl;
     font-size: 26px;
+    margin: 50px;
 }
 
 .around ul{
