--- a/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
@@ -6,6 +6,10 @@
     background-attachment: fixed;
 }
 
+.register-program-special svg{
+    color: rgb(235, 215, 149);
+    margin-left: 6px;
+}
 .container {
     width: 70%;
     background: transparent;
@@ -165,6 +169,11 @@
     box-shadow: 3px 3px 8px 4px rgb(255, 247, 247);
     cursor: pointer;
 }
+.input-date::-webkit-calendar-picker-indicator{
+    background-color: rgba(240, 248, 255, 0.562);
+    cursor: pointer;
+    border-radius: 4px;
+}
 .select-hotel h2{
     color: white;
     padding-top: 20px;
@@ -203,29 +212,6 @@
     margin: 10px;
 }
 
-
-.order-send{
-    display: flex;
-    justify-content: center;
-}
-
-.order-send button {
-    margin: 50px 0;
-    border: none;
-    border-radius: 20px 50px;
-    width: 200px;
-    height: 50px;
-    font-size: 18px;
-    font-weight: 700;
-    background-color: rgb(235, 215, 149);
-}
-
-.order-send button:hover {
-    background-color: rgb(41, 46, 41);
-    color: white;
-    width: 210px;
-    height: 60px;
-}
 input[type="radio"] {
     display: none;
   }
@@ -269,3 +255,27 @@ input[type="radio"] {
     box-shadow: 0px 0px 4px 2px rgb(255, 255, 255);
     
   }
+
+.order-send{
+    display: flex;
+    justify-content: center;
+}
+
+.order-send button {
+    margin: 50px 0;
+    border: none;
+    border-radius: 20px 50px;
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+    background-color: rgb(235, 215, 149);
+}
+
+.order-send button:hover {
+    background-color: rgb(41, 46, 41);
+    color: white;
+    width: 210px;
+    height: 60px;
+}
