--- a/src/assets/pages/Transport/Transport.css
+++ b/src/assets/pages/Transport/Transport.css
@@ -1,6 +1,14 @@
 .transport{
     padding: 100px 30px;
 }
+.transport svg{
+    color: var(--color-gold);
+    margin-left: 10px;
+}
+
+.information-transport{
+    padding: 15px;
+}
 
 .frame-transport{
     background-image: linear-gradient(346deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 22%,rgba(140, 140, 140,0.04) 22%, rgba(140, 140, 140,0.04) 69%,rgba(225, 225, 225,0.04) 69%, rgba(225, 225, 225,0.04) 100%),linear-gradient(31deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 42%,rgba(140, 140, 140,0.04) 42%, rgba(140, 140, 140,0.04) 85%,rgba(225, 225, 225,0.04) 85%, rgba(225, 225, 225,0.04) 100%),linear-gradient(55deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 13%,rgba(140, 140, 140,0.04) 13%, rgba(140, 140, 140,0.04) 72%,rgba(225, 225, 225,0.04) 72%, rgba(225, 225, 225,0.04) 100%),linear-gradient(90deg, rgb(22,18,14),rgb(22,18,14));
@@ -25,8 +33,10 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 96%;
+    width: 95.3%;
     height: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 1;
 }
