--- a/src/assets/pages/PagesRegister/RegisterProgramHajj/RegisterProgramHajj.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramHajj/RegisterProgramHajj.css
@@ -1,10 +1,16 @@
 .register-program-hajj{
-    background-image: url('../../../images/register.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 70%;
+    margin: auto;
     padding: 100px 0;
-    background-attachment: fixed;
 }
+.register-program-hajj form{
+    background-image: url('../../../images/register3.jpg');
+    background-size:cover;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+}
+
+
 .good-container , .helpless-container{
     width: 70%;
     margin: auto;
@@ -36,4 +42,12 @@
 .table1 input[type="file"]{
     display: none;
 }
+.paying , .radio-room , .health{
+    padding: 20px;
+    box-shadow: 0px 0px 5px rgb(255, 247, 247);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    
+}
+
 
