--- a/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
@@ -11,9 +11,9 @@
     margin-left: 6px;
 }
 .container {
-    width: 70%;
+    width:96%;
     background: transparent;
-    backdrop-filter: blur(18px);
+    backdrop-filter: blur(4px);
     margin: auto;
     padding: 20px;
     box-shadow: 0px 0px 20px rgb(255, 247, 247);
@@ -34,6 +34,7 @@
 }
 .table1 , .table2{
     float: right;
+    color: rgb(255, 255, 255);
 }
 .table1 input {
     text-align: right;
@@ -218,15 +219,20 @@ input[type="radio"] {
   
   .radio-container {
     position: relative;
-    padding-left: 40px; 
+    padding: 20px 10px 20px 60px;
+    padding-left: 80px; 
     margin-right: 20px; 
     cursor: pointer;
+    color: rgb(255, 255, 255);
+    background-color: rgb(133 158 206 / 26%);
+    border-radius: 10px;
+    
   }
   
 .radio-container .checkmark {
     position: absolute;
-    top: 0;
     left: 0;
+    margin-left: 15px;
     height: 20px;
     width: 20px;
     background-color: transparent;
