--- a/src/assets/sections/SectionTransport/SectionTransport.css
+++ b/src/assets/sections/SectionTransport/SectionTransport.css
@@ -4,23 +4,23 @@
  }
  
  
- .servise h1{
+ .service h1{
      text-align: center;
      padding-top: 20px;
      color: white;
      font-size: 35px;
  }
- .servise .lines {
+ .service .lines {
      display: flex;
      justify-content: center;
      margin-top: -8px;
  }
- .servise .lines .line{
+ .service .lines .line{
      width: 100px;
      height: 3px;
      background-color:antiquewhite;
  } 
- .servise .lines .circle{
+ .service .lines .circle{
      margin: 0;
      margin-top: -6px;
      width: 8px;
@@ -29,19 +29,21 @@
      border-radius: 50%;
      background-color: var(--color-dark-gold);
  }
- .servise .servises{
+ .service .services{
      display: grid;
      grid-template-columns: repeat(2,50%);
      text-align: right;
      font-size: 20px;
      margin-top: 30px;
      color: aliceblue;
+     direction: rtl;
  }
- .servises ul li{
+ .services ul li{
    list-style: none;
    margin-right: 30px;
  }
- .servises p{
+ .services p{
+    display: inline-block;
      margin-right: 50px;
      margin-bottom: 30px;
      font-size: 28px;
