--- a/src/assets/sections/Footer/Footer.css
+++ b/src/assets/sections/Footer/Footer.css
@@ -29,6 +29,7 @@ footer .parent {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    direction: rtl;
     color: white;
     height: max-content;
     margin: 0;
@@ -44,7 +45,10 @@ footer .parent h2 {
 
 footer .info p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+    font-size: 20px;
+}
+.links ul , .addres ul{
+    padding-right: 0;
 }
 
 footer .addres ul li,
