--- a/src/assets/sections/HajjPrograms/HajjPrograms.css
+++ b/src/assets/sections/HajjPrograms/HajjPrograms.css
@@ -1,6 +1,16 @@
 .hajj-programs{
-    min-height: 80vh;
-    height: max-content;
     display: grid;
     grid-template-columns: repeat(3,33%);
+    padding-bottom: 100px;
+}
+#HajjPrograms h1{
+    width: 85%;
+    color:var(--color-gold);
+    direction: rtl;
+    font-size: 28px;
+    margin: 40px;
+    padding: 50px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10% 20% 10% 50% /10% 50% 10% 50% ;
+    box-shadow: 10px 7px 10px;
 }
