--- a/src/assets/components/HotelInUmrahProgram/HotelInUmrahProgram.css
+++ b/src/assets/components/HotelInUmrahProgram/HotelInUmrahProgram.css
@@ -1,22 +1,50 @@
-.HotelBusInUmrahProgram{
+.HotelInUmrahProgram{
+    
     width: 100%;
-    margin: 70px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    margin: auto;
+    height: 130vh;
+    padding-top: 20px;
+}
+#hotel-1{
+   position: absolute;
+   top: 0;
+   left: 10%;
+}
+#hotel-0{
+    position: absolute;
+    top: 39%;
+    left: 34.8%;
+ }
+#hotel-2{
+    position: absolute;
+    top: 77%;
+    left: 59.6%;
+ }
+#hotel-3{
+    position: absolute;
+    top: 14px;
+    left: 60%;
+ }
+#hotel-0 , #hotel-1 , #hotel-2 , #hotel-3{
+    width: 450px;
+    height: 450px;
+    border-radius:50% ;
+    background-size: cover;
+} 
+
+
+.HotelContent{
+    position: relative;
+    width: 100%;
+    height: 80vh;
 }
 
-.HotelBusInUmrahProgram p,h1{
+.HotelBusInUmrahProgram p,h2{
     color: transparent;  
 }
 
 .col{
     position: relative;
-    width: 450px;
-    height: 450px;
-    border-radius:50% ;
-    margin: 0 -27px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,11 +55,7 @@
 
 }
 
-#col1{
-   margin-bottom: 60vh;
-}
-
-.col:hover h1{
+.col:hover h2{
   color:white; 
 }
 .col:hover p{
@@ -39,16 +63,15 @@
     font-size: 24px;
     font-weight: 600;
     margin: 20px;
- }
+    list-style: initial;
+}
 
  .content{
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
+    flex-direction: column;
+
  }
 
  .col:hover .content{
@@ -58,15 +81,10 @@
     backdrop-filter: blur(3px);
 
 }
-.colum1{
-    display: contents;
-}
 
 
  @media (max-width: 767px) {
-    #col1{
-        margin-bottom: 0;
-     }
+   
    }
 
    @media (min-width: 768px) and (max-width: 1100px) {
@@ -75,13 +93,7 @@
         height: 400px;
         margin: 10px;
        }
-    .colum1{
-        display: flex;
-        flex-direction: column;
-    }
-    #col1{
-        margin-bottom: 0;
-     }
+   
   }
 
   @media (min-width: 1101px) and (max-width: 1300px) {
@@ -90,9 +102,7 @@
      height: 350px;
      margin: 0 -22px;
     }
-    #col1{
-     margin-bottom: 48vh;
-    }
+   
   }
   
   @media (min-width: 1301px) and (max-width: 1450px) {
@@ -101,10 +111,7 @@
         height: 400px;
         margin: 0 -25px;
        }
-       #col1{
-        margin-bottom: 54vh;
-       }
   }
-  
+ 
   
   
