--- a/src/assets/components/CardHajj/CardHajj.css
+++ b/src/assets/components/CardHajj/CardHajj.css
@@ -1,100 +1,168 @@
-
-
-.card-hajj-program{
-    transition: 0.3s;
+.card-news {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 40px;
     position: relative;
-    transform-style: preserve-3d;
-    cursor: pointer;
-}
-
-.front{
-    position: absolute;
-    z-index: 1;
-    backface-visibility: hidden;
-}
-
-.back{
-    background-color: rgb(49, 49, 47);
-    position: absolute;
-    transform: rotateY(180deg);
-}
-
-.card-hajj-program, .front , .back {
-    width: 300px;
-    height: 450px;
-    margin: 20px auto;
-    border-radius: 20px;
-
-}.card-hajj-program:hover {
-    transform: rotateY(180deg);
-}
-
-.front img {
-    width: 100%;
+    height: 380px;
+    box-shadow: 0px 0px 24px gray;
+    overflow: hidden;
+    font-size: 19px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #303030;
+  
+  }
+  .card-news .left {
+        position: absolute;
+    background-color: #303030 !important;
+    color: white;
+    width: 70%;
+    transform: skewX(-10deg);
     height: 100%;
-    border-radius: 20px;
-}
-
-.front .tex {
+    z-index: 2;
+    right: 26%;
+    left: 0%;
+  }
+  span {
+    position: relative;
+    color: rgb(248, 246, 246);
+    text-align: left;
+    font-size: 20px;
+    margin-left: 30px;
+  }
+  .my-4 {
+    margin-top: 0.8rem !important;
+    margin-bottom: 0.8rem !important;
+    text-align: right;
+    margin-right: 10px;
+  }
+  .card-news ul li{
+    list-style: none;
+    text-align: right;
+    margin-right: 10px;
+   
+  }
+  i{
+   font-size: x-large;
+    padding: 2px;
+  }
+  .card-news .left span::after {
     position: absolute;
-    background-color: #00000073;
-    width: 92%;
-    display: flex;
-    justify-content: space-between;
-    bottom: 0;
-    padding: 12px;
+    content: "";
+    width: 30%;
+    height: 3px;
+    border-radius: 4px;
+    background-color: #897002;
+    bottom: -8px;
+    left: 0;
+    transition: 0.3s;
+  }
+  .card-news .right {
+      position: absolute;
+    width: 35%;
+    height: 100%;
+    background-image: url(../../images/makka1.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    right: 0%;
+    z-index: 1;
+    transition: 0.3s;
+  }
+  .card-news .right:hover {
+    transform: scale(2);
+  }
+  .card2-news {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 40px;
+    position: relative;
+    height: 380px;
+    box-shadow: 0px 0px 24px gray;
+    overflow: hidden;
     color: white;
-    align-items: center;
-    border-radius: 15px;
-    text-align: right;
-}
-
-.front .left span {
-    color: rgb(255, 241, 216);
-    font-weight: bold;
     font-size: 20px;
-    margin-bottom: 5px;
-    text-transform: capitalize;
-    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:  #303030;
+  }
+  .card2-news .right {
+    width: 35%;
+    height: 100%;
+    background-image: url(../../images/makka2.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    left: 0%;
+    z-index: 1;
+    transition: 0.3s;
+
+
     
-}
-
-.back h2{
-    text-align: center;
-    text-transform: capitalize;
+  }
+  .card2-news .left {
+    background-color: #303030 !important;
+    width: 70%;
+    transform: skewX(10deg);
+    height: 100%;
+    position: absolute;
+      z-index: 2;
+    right: 0%;
+    padding: 0px 0px 0px 10px;
     color: white;
-    font-size: 25px;
-}
-.back .detiles{
-    margin: 20px 0px;
-    align-items: center;
-}
-
-.back .detiles span{
-    padding-left: 8px;
-    font-size: 20px;
-    color: rgb(250, 248, 243);
-margin-left: 100px;}
-
-
-.back p{
-    font-weight: bold;
-    color: white;
-    padding: 10px;
-    text-transform: capitalize;
+    
+  }
+  .card2-news .left ul li{
+    list-style: none;
     text-align: right;
-    
-}
-.back button{
-    display: block;
-    margin: 10px auto;
-    padding: 10px;
-    border: none;
-    background-color: #ab8620;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 0.8rem;
-    border-radius: 10px;
-}
+    margin-right: 30px;
+  }
+  h2 {
+    font-size: calc(1.325rem + 0.9vw);
+    text-align: right;
+    margin-right: 10px;
+    color: #f3e297;
+  }
+  .card2-news .left span {
+    position: relative;
+  }
+  .card2-news .left span::after {
+    position: absolute;
+    content: "";
+    width: 30%;
+    height: 3px;
+    border-radius: 4px;
+    background-color: #897002;
+    bottom: -8px;
+    left: 0;
+    transition: 0.3s;
+  }
+  *,
+  ::after,
+  ::before {
+    box-sizing: border-box;
+  }
+  .card2-news .right:hover {
+    transform: scale(2);
+  }  
+  .btn{
+    margin-bottom: 10px;
+    border:1px solid #897002;
+    margin-left: 100px;
+    font-size: 20px;
+    padding: 2px;
+    width:150px;
+    border-radius: 5px;
+    background-color: #474747;
+    color: aliceblue;
 
+  }
+  .btn:hover{
+    
+        margin-bottom: 30px;
+        width:160px;
+    
+        background-color: #fffcfc;
+        color: rgb(47, 48, 48);
+    
+      
+  }
