--- a/src/assets/sections/HajjPrograms/HajjPrograms.css
+++ b/src/assets/sections/HajjPrograms/HajjPrograms.css
@@ -1,8 +1,8 @@
-.hajj-programs{
+/* .hajj-programs{
     display: grid;
     grid-template-columns: repeat(3,33%);
     padding-bottom: 100px;
-}
+} */
 #HajjPrograms h1{
     width: 85%;
     color:var(--color-gold);
@@ -14,3 +14,12 @@
     border-radius: 10% 20% 10% 50% /10% 50% 10% 50% ;
     box-shadow: 10px 7px 10px;
 }
+.fixed {
+    width: 100%;
+    height: 300px;
+    background-image: url(../../images/register.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 100px 0px;
+  }
