--- a/src/assets/components/CardUmrahProgram/CardUmrahProgram.css
+++ b/src/assets/components/CardUmrahProgram/CardUmrahProgram.css
@@ -4,8 +4,8 @@
     margin: 80px;
     padding: 10px;
     background-color: var(--color-silver);
-    width: 350px;
-    height: 80vh;
+    width: 370px;
+    height: fit-content;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 10px 7px 10px ;
@@ -28,18 +28,13 @@
 }
 .umrah-programs-image{
     width: 100%;
-    height: 50%;
+    height: 250px;
     transition: all .5s;
 }
 
 .umrah-programs-image:hover{
      transform: scale(1.3) rotate(12deg);
      filter: brightness(70%);
-     -webkit-filter: brightness(70%);
-     -webkit-transform: scale(1.3) rotate(12deg);
-     -moz-transform: scale(1.3) rotate(12deg);
-     -ms-transform: scale(1.3) rotate(12deg);
-     -o-transform: scale(1.3) rotate(12deg);
 }
 
 .umrah-programs-content{
@@ -47,9 +42,9 @@
     backdrop-filter: blur(20px);
     width: 100%;
     height: 40%;
+    padding: 20px 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    position: relative;
     display:flex;
     justify-content: center;   
 }
