--- a/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
@@ -5,22 +5,10 @@
     padding: 100px 0;
 }
 
-.container {
-    width: 60%;
-    background: transparent;
-    backdrop-filter: blur(13px);
-    margin: auto;
-    padding: 20px;
-    box-shadow: 0px 0px 20px rgb(255, 247, 247);
-    border: 2px solid rgba(255, 255, 255, 0.5);
-    border-radius: 20px;
-}
 
-.container .hellow,
-.title-program {
+.container .hellow, .title-program {
     text-align: center;
     color: white;
-
 }
 
 @keyframes slide {
@@ -52,73 +40,12 @@ i {
 }
 
 
-.container .register .chiled-register {
-    background-color: rgba(233, 245, 210, 0.589);
-    padding: 20px;
-    border-radius: 20px;
-    color: black;
-    font-size: 20px;
-
-
-}
-
-.container .register input {
-    text-align: right;
-    margin: 10px;
-    padding: 5px;
-    font-size: 15px;
-}
-
-.register .name input {
-    margin-right: 85px;
-}
-
-.register .phon input {
-    margin-right: 50px;
-}
-
-.container .paperwork {
-    margin-left: 0;
-    animation: slide 2s forwards;
-    animation-delay: 1.2s;
-    transform: translatex(-200%);
-}
-
-.container .chiled-paper {
-    background-color: rgba(233, 245, 210, 0.589);
-    padding: 10px;
-    border-radius: 20px;
-    color: black;
-    font-size: 20px;
-    height: 100px;
-    text-align: right;
-
-
-
-}
-
-.container .chiled-paper input {
-    text-align: right;
-    margin-left: 100px;
-    padding: 5px;
-    font-size: 17px;
-}
-
-.container .chiled-paper label {
-    margin-left: 60px;
-}
-
-.container .chiled-paper .phpto label {
-    margin-left: 100px;
-}
-
 .container .booking {
     display: flex;
     margin-left: 45%;
-
     animation: slide 2s forwards;
     animation-delay: 3.2s;
-    transform: translatex(-200%);
+    transform: translateX(200%);
 }
 
 .container .booking h3 {
@@ -130,73 +57,3 @@ i {
 
 }
 
-.container .room {
-    animation: slide 2s forwards;
-    animation-delay: 4.5s;
-    transform: translatex(-200%);
-}
-
-.container .room .chiled-room {
-    display: flex;
-
-}
-
-.container .room .chiled-room .two {
-    margin-left: 60px;
-    margin-right: 60px;
-    margin-top: 40px;
-}
-
-.container .room .chiled-room .one,
-.three {
-    margin-top: 40px;
-}
-
-.container .room .chiled-room,
-.chiled-paying {
-    background-color: rgba(233, 245, 210, 0.589);
-    padding: 20px;
-    border-radius: 20px;
-    color: black;
-    font-size: 17px;
-    height: 100px;
-}
-
-.container .paying {
-    animation: slide 2s forwards;
-    animation-delay: 6s;
-    transform: translatex(-200%);
-}
-
-.container .paying .chiled-paying {
-    display: flex;
-
-}
-
-.container .paying .chiled-paying .electronic,
-.cash {
-    margin-left: 200px;
-    margin-top: 40px;
-    font-size: 18px;
-}
-
-.send2 {
-
-    text-align: center;
-    border: none;
-    border-radius: 20px 50px;
-    width: 200px;
-    margin-top: 50px;
-    height: 50px;
-    font-size: 18px;
-    font-weight: 700;
-    background-color: rgb(235, 215, 149);
-    margin-left: 300px;
-}
-
-.send2:hover {
-    background-color: rgb(41, 46, 41);
-    color: white;
-    width: 210px;
-    height: 60px;
-}
