--- a/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
@@ -6,9 +6,14 @@
 }
 
 
-.container .hellow, .title-program {
+.container .hellow {
     text-align: center;
     color: white;
+}
+.title-program{
+    text-align: center;
+    color: var(--color-text);
+    padding: 10px 0;
 }
 
 @keyframes slide {
