--- a/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
@@ -70,4 +70,10 @@ i {
     border:1px solid snow ;
     box-shadow: 0px 0px 4px 2px rgb(0, 0, 0);
 }
+.seat option {
+    color: aliceblue;
+    background-color: #00000070;
+    padding: 10px;
+    margin: 10px;
+}
 
