--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -115,7 +115,7 @@
   .dashborde tr th{
     border-radius: 5px;
   }
-   .dashborde tr td,th {
+   .dashborde tr td,.dashborde th {
     margin: 5px;
     background: linear-gradient(to left, #7e6624, #816b22, #a7942d, #dac08a);
     border: 3px solid rgb(255, 255, 255);
