--- a/src/assets/pages/HajjPrograms/HajjPrograms.css
+++ b/src/assets/pages/HajjPrograms/HajjPrograms.css
@@ -109,7 +109,7 @@
      
     
     }  
-    .hotel-program-hajj{
+    .hotels{
         margin-top: 900px !important;
     } 
     .par{
@@ -140,17 +140,17 @@ font-size: 18px;
 }
 
 
-.hotel-program-hajj{
+.hotels{
     margin-top: 300px;
     height: 700px;
 }
 @media(max-width: 850px){
-    .hotel-program-hajj{
+    .hotels{
         margin-top: 500px;
     }
 }
 
-.hotel-program-hajj img{
+.hotels img{
 
     height: 500px !important;
     width: 500px !important;
@@ -425,24 +425,23 @@ video{
     border-radius: 50px;
     width: 60%;
 }
-.parent-vidios .booking{
+.book-trip {
 width: 100%;
 height: 100px;
 text-align: center;
 }
-.parent-vidios .booking button{
+.book-trip  button{
     margin: auto;
-    margin-top: 20px;
+    margin-top: 180px;
     width: 50%;
     border: none;
     border-radius: 50%;
     height: 50px;
     font-size: x-large;
     background-color: rgb(121, 105, 42);
-    color: white;
+    color: rgb(27, 25, 25);
 }
-.parent-vidios .booking button:hover{
-    background-color:white;
-    color: rgb(121, 105, 42);
-    width: 55%;
+.book-trip  button:hover{
+ width: 55%;
+ height: 60px;
 }
