--- a/src/assets/components/BusInUmrahProgram/BusInUmrahProgram.css
+++ b/src/assets/components/BusInUmrahProgram/BusInUmrahProgram.css
@@ -3,6 +3,7 @@
     border-radius: 5px;
     margin: 150px 30px;
     padding-bottom: 40px;
+    box-shadow: 2px 2px 10px -1px var(--color-dark-gold);
 }
 
 .busCompany-img{
