--- a/src/assets/components/CardHajj/CardHajj.css
+++ b/src/assets/components/CardHajj/CardHajj.css
@@ -60,17 +60,20 @@
       position: absolute;
     width: 35%;
     height: 100%;
-    background-image: url(../../images/makka1.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: center;
     right: 0%;
     z-index: 1;
     transition: 0.3s;
   }
+  .card-news .right img{
+    width: 100%;
+    height: 100%;
+}
+
   .card-news .right:hover {
     transform: scale(2);
-  }
+}
+
+
   .card2-news {
     width: 80%;
     margin: auto;
@@ -85,20 +88,18 @@
     background-color:  #303030;
   }
   .card2-news .right {
+    position: absolute;
     width: 35%;
     height: 100%;
-    background-image: url(../../images/makka2.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
     left: 0%;
     z-index: 1;
     transition: 0.3s;
-
-
-    
   }
+  .card2-news .right img{
+    width: 100%;
+    height: 100%;
+  }
+
   .card2-news .left {
     background-color: #303030 !important;
     width: 70%;
